// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Components > Atoms > Button > Snapshot > Should match snapshot basic anchor 1`] = `
<div>
  <a
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium pl-6 pr-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-anchor"
    href="https://example.com"
  >
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
  </a>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot basic button 1`] = `
<div>
  <button
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium pl-6 pr-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-button"
  >
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
  </button>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot with end icon on anchor 1`] = `
<div>
  <a
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium pl-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-anchor"
    href="https://example.com"
  >
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
    <span
      data-testid="button-end"
    >
      <div>
        EI
      </div>
    </span>
  </a>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot with end icon on button 1`] = `
<div>
  <button
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium pl-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-button"
  >
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
    <span
      data-testid="button-end"
    >
      <div>
        EI
      </div>
    </span>
  </button>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot with start and end icon on anchor 1`] = `
<div>
  <a
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-anchor"
    href="https://example.com"
  >
    <span
      data-testid="button-start"
    >
      <div>
        SI
      </div>
    </span>
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
    <span
      data-testid="button-end"
    >
      <div>
        EI
      </div>
    </span>
  </a>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot with start and end icon on button 1`] = `
<div>
  <button
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-button"
  >
    <span
      data-testid="button-start"
    >
      <div>
        SI
      </div>
    </span>
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
    <span
      data-testid="button-end"
    >
      <div>
        EI
      </div>
    </span>
  </button>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot with start icon on anchor 1`] = `
<div>
  <a
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium pr-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-anchor"
    href="https://example.com"
  >
    <span
      data-testid="button-start"
    >
      <div>
        SI
      </div>
    </span>
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
  </a>
</div>
`;

exports[`Components > Atoms > Button > Snapshot > Should match snapshot with start icon on button 1`] = `
<div>
  <button
    class="flex items-center justify-between gap-4 transition-colors ease-in-out duration-300 font-medium pr-6 text-lg bg-amber-400 hover:bg-amber-600 text-slate-900 rounded-full"
    data-testid="button-button"
  >
    <span
      data-testid="button-start"
    >
      <div>
        SI
      </div>
    </span>
    <span
      class="w-100"
      data-testid="button-content"
    >
      My Button Test
    </span>
  </button>
</div>
`;
